--- a/front/angular.json
+++ b/front/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "rappi-angular": {
+    "rappi-hackathon": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/rappi-angular",
+            "outputPath": "dist/rappi-hackathon",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -50,18 +50,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "rappi-angular:build"
+            "browserTarget": "rappi-hackathon:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "rappi-angular:build:production"
+              "browserTarget": "rappi-hackathon:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "rappi-angular:build"
+            "browserTarget": "rappi-hackathon:build"
           }
         },
         "test": {
@@ -95,7 +95,7 @@
         }
       }
     },
-    "rappi-angular-e2e": {
+    "rappi-hackathon-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "targets": {
@@ -103,11 +103,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "rappi-angular:serve"
+            "devServerTarget": "rappi-hackathon:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "rappi-angular:serve:production"
+              "devServerTarget": "rappi-hackathon:serve:production"
             }
           }
         },
@@ -123,5 +123,5 @@
       }
     }
   },
-  "defaultProject": "rappi-angular"
+  "defaultProject": "rappi-hackathon"
 }
