--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "assert": "^1.4.1",
     "cors": "^2.8.4",
     "crypto": "^1.0.1",
     "dotenv": "^6.0.0",
@@ -16,6 +17,8 @@
     "express": "^4.16.3",
     "express-group-routes": "^1.1.0",
     "moment": "^2.22.2",
+    "mongodb": "^3.1.6",
+    "mongoose": "^5.2.14",
     "nodemailer": "^4.6.5",
     "nunjucks": "^3.1.3",
     "pg": "^7.4.3",
