--- a/front/package.json
+++ b/front/package.json
@@ -32,6 +32,8 @@
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "angular-maps": "^6.0.1",
+    "bingmaps": "^2.0.3",
     "codelyzer": "~4.3.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
